# SimpleFSM

./: .gitignore  LICENSE  README.md  pyproject.toml  toyproject_example.ipynb
SimpleFSM/: __init__.py  _meta.py  fsm.py  state.py
tests/: test_fsm.py  test_state.py
